package assignment.entities;

/**
 * Denote an empty cell.
 */
public final class Empty extends Entity {
}
