package assignment.entities;


/**
 * An entity in the Sokoban game.
 */
public abstract class Entity {

}
