package assignment.game;

/**
 * A Sokoban game.
 */
public interface SokobanGame {

    /**
     * Runs the game loop.
     */
    void run();
}
