package assignment.entities;

/**
 * Denotes a wall.
 */
public final class Wall extends Entity {
}
